updating smart contracts to accept different kinds of hashes. Adding getters and some other stuff to contracts. Updating swagger and api to reflect
